# ChangeLog for www-client/google-chrome
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 May 2011; Michael Weber <xmw@gentoo.org>
  google-chrome-11.0.696.65-r84435.ebuild,
  google-chrome-12.0.742.30-r84361.ebuild:
  Ebuild cleanup

*google-chrome-12.0.742.30-r84361 (08 May 2011)

  08 May 2011; Michael Weber <xmw@gentoo.org>
  -google-chrome-12.0.742.21-r84192.ebuild,
  +google-chrome-12.0.742.30-r84361.ebuild:
  Automated version bump

*google-chrome-11.0.696.65-r84435 (08 May 2011)

  08 May 2011; Michael Weber <xmw@gentoo.org>
  -google-chrome-11.0.696.57-r82915.ebuild,
  +google-chrome-11.0.696.65-r84435.ebuild:
  Automated version bump

*google-chrome-12.0.742.21-r84192 (06 May 2011)

  06 May 2011; Michael Weber <xmw@gentoo.org>
  -google-chrome-12.0.742.16-r83695.ebuild,
  +google-chrome-12.0.742.21-r84192.ebuild:
  Automated version bump

*google-chrome-12.0.742.16-r83695 (03 May 2011)

  03 May 2011; Michael Weber <xmw@gentoo.org>
  -google-chrome-12.0.742.12-r83281.ebuild,
  +google-chrome-12.0.742.16-r83695.ebuild:
  Version bump

*google-chrome-12.0.742.12-r83281 (02 May 2011)
*google-chrome-11.0.696.57-r82915 (02 May 2011)

  02 May 2011; Michael Weber <xmw@gentoo.org>
  +google-chrome-11.0.696.57-r82915.ebuild,
  +google-chrome-12.0.742.12-r83281.ebuild, +metadata.xml:
  Initial import, bug 272805
