@@ -5,14 +5,14 @@ DIST google-chrome-stable_11.0.696.65-r84435_amd64.deb 22098382 RMD160 124714069
 DIST google-chrome-stable_11.0.696.65-r84435_i386.deb 24044500 RMD160 30c761005935808170c9008b70bf7c23f3c25675 SHA1 1c418266678f24e24db59e9e4f5abed3a29dc302 SHA256 5eb2039ef9810b8701862c44289cc6718a936a9670a6d6e73570aa10048bd137
 DIST google-chrome-unstable_12.0.742.30-r84361_amd64.deb 22267878 RMD160 cca59cf53a29b2ee4c1308f79c040f980568e88d SHA1 4e17f688fcfa81b3b3b38342df279a4499a8c96b SHA256 073a8d79976a66f6102efd8ad09701298e9e4ba8269ceb03fe3137e194eeff73
 DIST google-chrome-unstable_12.0.742.30-r84361_i386.deb 24534080 RMD160 b4b02ec07c6ed4d0d0f6754a30712dd30902dcb9 SHA1 639a41fcbdb73f3e3132593e73b08b66ecad1551 SHA256 01c019b36703cd63650aee6561c8e47cae40fbee973f898c34cada9cdf0f56ac
-EBUILD google-chrome-11.0.696.65-r84435.ebuild 3281 RMD160 98aa4357e8fd49f6b418e0a0081e2b6164034e1e SHA1 f6243f1d8a4b049e82270bc2d1c2cc01080b9639 SHA256 123378eef6783bdf7ad7f6488e1b21d5f8f479965115b36dd5a8e3011a2d1d89
-EBUILD google-chrome-12.0.742.30-r84361.ebuild 3283 RMD160 daaa037746d65074ada6473052f9e70d8b1b3a6a SHA1 0a12fdf3addb119a0d184cd2df8b0a140ef303b8 SHA256 414aecead97a21b34e9a7a51c4616a1423cb91ef7eea11859f7a586f20b55264
-MISC ChangeLog 1377 RMD160 834524e8952dd28ebee748cb9b7d48e70ea0e860 SHA1 aec2dbad4d3bce2530474755ff05343976bb8b40 SHA256 5f6dc760d9dd99635f7842c9a60e2d118a97f4678e0030b5496c3b2ef8b0612d
+EBUILD google-chrome-11.0.696.65_p84435.ebuild 3286 RMD160 f71977dccca9f45be24a376b76956835fb296827 SHA1 ecc1864bd6c903722ea24bd528bca84802b18304 SHA256 6d86640cd308e17425f724c34c4374e1ba4b282dc0db1f54f4a662c06192fcb7
+EBUILD google-chrome-12.0.742.30_p84361.ebuild 3288 RMD160 243615f102b806e31f5c033e559946280e9a8e80 SHA1 4c30599a2dc608f4b5ef592f031f0cdc171cba3f SHA256 187b650935e685d3708a344285a2ae56c323e3df432403abb43ae313d4d92ded
+MISC ChangeLog 1729 RMD160 ecfff5d30186f0a1b5e258c6305d18990495fad7 SHA1 0eefafbc3514ab1e6eaad117e0eb21d48299e5fb SHA256 07eee28d7f01947607d7b466869239c1219df67341061e667a8a24bbdab63800
 MISC metadata.xml 297 RMD160 8966e5b4c3746ee7cf40fef81cad93dfa2703e53 SHA1 7d096f4f0dd036f93e7daf012a1c628a657039c3 SHA256 e1c43be8d49551beb44bb1061702babfee89b6f057b52133172a702925c2c96f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk3IXJ0ACgkQknrdDGLu8JAXPwD/W5hRJMnZ+9H1N9H62V8Fe/dL
-373hRVQfR39PX5WSLEMA+wXPpLJzAW9ji1V+xbDt+jks2McXXS54mZhePFPIaVfv
-=6tvn
+iF4EAREIAAYFAk3JBIAACgkQknrdDGLu8JBPfgD/TjENtVHfyMPAgggMciIvYXXB
+263do4HLpIbOXQqb2g0A/RxizcjarxpXo+V11P916ZfSG0ek7dYRFj9WSuCddh1/
+=6KbL
 -----END PGP SIGNATURE-----
